--- a/Recess/src/Dashboard.css
+++ b/Recess/src/Dashboard.css
@@ -2,14 +2,31 @@
 
 .dashboard-container {
   display: flex;
-  flex-direction: column; /* Stack all child elements vertically */
-  align-items: center; /* Center horizontally */
+  flex-direction: column;
+  align-items: center;
   height: calc(100vh - 64px);
   width: 100vw;
   background: linear-gradient(to bottom, #1c1c1c, #2a2a2a);
   color: #fff;
   box-sizing: border-box;
 }
+
+.empty-state {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+}
+
+.nothing-image {
+  max-width: 600px;
+  width: 100%;
+  height: auto;
+  opacity: 0.9;
+  margin-bottom: 20px;
+}
+
 
 .taskBox {
   position: relative;
@@ -43,6 +60,7 @@ h2 {
   margin-bottom: 12px;
   transition: background-color 0.25s ease;
 }
+
 h2:hover {
   background-color: #ffffff1e;
 }
@@ -69,7 +87,7 @@ h2:hover {
   align-items: flex-start;
   padding: 20px;
   box-sizing: border-box;
-  position: relative; /* Ensure relative positioning for child elements */
+  position: relative;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.336);
 }
 
@@ -89,12 +107,14 @@ h2:hover {
   margin-left: 440px;
   border-radius: 21px;
 }
-.Reward{
+
+.Reward {
   display: flex;
-  justify-content: center; /* Center horizontally */
+  justify-content: center;
   margin-top: 55px;
   font-weight: 400;
 }
+
 .buttonBox {
   position: absolute;
   top: 20px;
@@ -105,52 +125,58 @@ h2:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.281);
   z-index: 10;
 }
-.cancel{
-    border-radius: 24px;
-    background: linear-gradient(to top, rgba(97, 3, 3, 0.568), rgba(196, 3, 3, 0.658));
-    border-width: 0px;
-    margin-right: 5px;
-    transition: background-color 0.25s ease-in;
+
+.cancel {
+  border-radius: 24px;
+  background: linear-gradient(to top, rgba(97, 3, 3, 0.568), rgba(196, 3, 3, 0.658));
+  border-width: 0px;
+  margin-right: 5px;
+  transition: background-color 0.25s ease-in;
 
 }
-.cancel:hover{
-    background-color: rgb(212, 38, 38);
-    border-width: 2px;
-    border-color: white;
-}
-.contact{
-    border-radius: 24px;
-    background: linear-gradient(to top, rgba(3, 13, 70, 0.432),rgba(3, 6, 196, 0.527));
-    margin-left: 5px;
-    transition: background-color 0.25 ease-in;
-}
-.contact:hover{
-    background-color:rgb(13, 22, 153);
-    border-width: 2px;
-    border-color: white;
+
+.cancel:hover {
+  background-color: rgb(212, 38, 38);
+  border-width: 2px;
+  border-color: white;
 }
 
-.details{
-    justify-content: center;
-    background: linear-gradient(to top, rgba(26, 25, 25, 0.377), rgba(110, 110, 110, 0.233));
-    width: 100%;
-    margin-top: 20px;
-    padding: 15px;
-    border-radius: 25px;
-    box-sizing: border-box;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 20px;
-    box-sizing: border-box;
-    position: relative; /* Ensure relative positioning for child elements */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.336);
+.contact {
+  border-radius: 24px;
+  background: linear-gradient(to top, rgba(3, 13, 70, 0.432), rgba(3, 6, 196, 0.527));
+  margin-left: 5px;
+  transition: background-color 0.25 ease-in;
 }
-.description{
-    font-weight: 200;
+
+.contact:hover {
+  background-color: rgb(13, 22, 153);
+  border-width: 2px;
+  border-color: white;
 }
+
+.details {
+  justify-content: center;
+  background: linear-gradient(to top, rgba(26, 25, 25, 0.377), rgba(110, 110, 110, 0.233));
+  width: 100%;
+  margin-top: 20px;
+  padding: 15px;
+  border-radius: 25px;
+  box-sizing: border-box;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 20px;
+  box-sizing: border-box;
+  position: relative;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.336);
+}
+
+.description {
+  font-weight: 200;
+}
+
 .more {
   background: linear-gradient(to top, rgba(41, 138, 228, 0.281), rgba(117, 172, 255, 0.411));
   border: none;
@@ -159,11 +185,12 @@ h2:hover {
   font-size: 16px;
   color: #fff;
   cursor: pointer;
-  margin-top: 20px; /* Add spacing from the taskBox */
+  margin-top: 20px;
+
   text-align: center;
   transition: background-color 0.3s ease;
 }
 
 .more:hover {
-  background-color: rgba(41, 138, 228, 0.5); /* Slightly darker hover effect */
+  background-color: rgba(41, 138, 228, 0.5);
 }
